adding changes to index and test

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
   <div class="dashboardmain">
     <div class="dashboardcontainer w-container">
       <h1 class="dashh1">Blockgigz</h1>
-      <h2 class="dashboardh2">Find jobs to help you start your career in blockchain technology</h2></div>
+      <h2 class="dashboardh2">Find jobs to help you start your career in blockchain technology</h2>
+      <a href="jobpost.html"><button class="button col-centered">Post Job</button></a>
+    </div>
     <div class="itemcontainerdash w-container">
       <a class="showallbuttons w-hidden-main w-button" data-ix="shoorting-buttons">Filters</a>
       <div id="filter" class="filter-menu w-clearfix">
