--- a/jobpost.html
+++ b/jobpost.html
@@ -47,6 +47,9 @@
       color: #FFFFFF;
       background: #00e676;
     }
+    .btn {
+      background-color: #00e676;
+    }
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
@@ -79,7 +82,7 @@
     <div class="card-body">
 
         <!-- Default form subscription -->
-        <form>
+        <form action=index.html>
             <p class="h4 text-center py-4">Post Job</p>
 
             <!-- Default input name -->
@@ -107,7 +110,7 @@
 
 
             <div class="text-center py-4 mt-3">
-                <button class="btn btn-outline-purple" type="submit">Send<i class="fa fa-paper-plane-o ml-2"></i></button>
+                <button class="btn" type="submit">Send<i class="fa fa-paper-plane-o ml-2"></i></button>
             </div>
         </form>
         <!-- Default form subscription -->
