--- a/jobpost.html
+++ b/jobpost.html
@@ -16,6 +16,21 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
 
+<!-- firebase -->
+<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCwYKEkvMQnPL8UCZmMirLfWiHNfJKAFlg",
+    authDomain: "testblock-8bfcc.firebaseapp.com",
+    databaseURL: "https://testblock-8bfcc.firebaseio.com",
+    projectId: "testblock-8bfcc",
+    storageBucket: "",
+    messagingSenderId: "844886897958"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <!-- JQuery -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!-- Bootstrap tooltips -->
