--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link href="test.css" rel="stylesheet" type="text/css" />
 
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyCwYKEkvMQnPL8UCZmMirLfWiHNfJKAFlg",
+    authDomain: "testblock-8bfcc.firebaseapp.com",
+    databaseURL: "https://testblock-8bfcc.firebaseio.com",
+    projectId: "testblock-8bfcc",
+    storageBucket: "",
+    messagingSenderId: "844886897958"
+  };
+  firebase.initializeApp(config);
+</script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript">*/ </script>
   <script type="text/javascript">
     WebFont.load({
