fixing and footer

--- a/jobpost.html
+++ b/jobpost.html
@@ -144,35 +144,19 @@
   <div class="background-section">
     <div class="wrapper w-container">
       <div class="footer-v5">
+
+
         <div class="footer-v5-nav-list">
-          <h6 class="footer-v5-header">Header</h6>
-            <a class="footer-v5-nav-link">link</a>
-            <a class="footer-v5-nav-link">link</a>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
+          <a href="index.html"><h6 class="footer-v5-header">Home</h6></a>
         </div>
 
         <div class="footer-v5-nav-list">
-          <h6 class="footer-v5-header">Header</h6>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
-        </div>
+          <a href="jobpost.html"><h6 class="footer-v5-header">Post a Job</h6></a>
 
-        <div class="footer-v5-nav-list">
-          <h6 class="footer-v5-header">Header</h6>
-            <a class="footer-v5-nav-link">Link</a>
-            <a class="footer-v5-nav-link">Link</a>
         </div>
-
-        <div class="footer-v5-nav-list">
-          <h6 class="footer-v5-header">Header</h6>
-            <a class="footer-v5-nav-link">Link</a></div>
 
         <div class="footer-bottom-v1 fb1b">
-          <p class="footerlegal">Hello from Arkansas</p>
+          <p class="footerlegal">&copy 2018 Blockgigz</p>
         </div>
       </div>
     </div>
