--- a/index.html
+++ b/index.html
@@ -12,21 +12,14 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
-  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+
 <script>
   // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyCwYKEkvMQnPL8UCZmMirLfWiHNfJKAFlg",
-    authDomain: "testblock-8bfcc.firebaseapp.com",
-    databaseURL: "https://testblock-8bfcc.firebaseio.com",
-    projectId: "testblock-8bfcc",
-    storageBucket: "",
-    messagingSenderId: "844886897958"
-  };
-  firebase.initializeApp(config);
+
 </script>
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript">*/ </script>
+  <script src="jobpost.js"></script>
   <script type="text/javascript">
     WebFont.load({
       google: {
@@ -66,7 +59,8 @@
       <h1 class="dashh1">Blockgigz</h1>
       <h2 class="dashboardh2">Find jobs to help you start your career in blockchain technology</h2>
 <div class="text-center py-4 mt-3">
-      <a id="postlink" href="jobpost.html"><button class="btn">Post a Job<i class="fa fa-pencil ml-2"></i></button></a>
+      <!--<a id="postlink" href="jobpost.html"><button class="btn">Post a Job<i class="fa fa-pencil ml-2"></i></button></a> -->
+      <button class="btn" id="bt-popup">Post a Job<i class = "fa fa-pencil ml-2"></i></button>
 </div>
 
 
@@ -179,7 +173,7 @@
         </div>
 
         <div class="footer-bottom-v1 fb1b">
-          <p class="footerlegal">&copy 2018 Blockgigz</p>
+          <p class="footerlegal"> copy 2018 Blockgigz</p>
         </div>
       </div>
     </div>
@@ -205,6 +199,35 @@
     });
    </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js" type="text/javascript"> </script>
+
+
+  <script src="https://embed.typeform.com/embed.js" type="text/javascript"></script>
+<script type="text/javascript">
+  let popup2;
+  window.addEventListener('DOMContentLoaded', function () {
+      // When instantiating a popup embed, you must provide the URL
+      // of your typeform and your desired embed settings. If you don't
+      // provide any settings, a default 'popup' embed is instantiated.
+
+
+      popup2 = window.typeformEmbed.makePopup('https://josh933.typeform.com/to/gZvVsb', {
+        hideHeaders: true,
+        hideFooter: true
+      });
+
+
+    })
+
+    // Now we bind our buttons to open our previously instantiated
+    // embedded typeforms when clicked
+
+
+    document.getElementById('bt-popup').addEventListener('click', function () {
+      popup2.open();
+    });
+
+
+</script>
 
 
 </body>
