--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     background-color: #00e676;
     text-align: center;
   }
+  .list-group-item:hover {
+    
+  }
+
   </style>
 
 </head>
@@ -79,6 +83,35 @@
         <a  data-filter=".social" class="button socialbutton w-button">Social &amp; Content</a>
         <a data-filter=".computwebflow-iconsing" class="button computingbutton w-button">Computing</a>
 -->
+<div class="list-group">
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">Blockstack Engineer</h5>
+      <small>3 days ago</small>
+    </div>
+    <div class="d-flex w-100 justify-content-between">
+    <small>Blockstack</small>
+    <small>New York, NY</small>
+  </div>
+  </a>
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small class="text-muted">3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small class="text-muted">Donec id elit non mi porta.</small>
+  </a>
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">List group item heading</h5>
+      <small class="text-muted">3 days ago</small>
+    </div>
+    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+    <small class="text-muted">Donec id elit non mi porta.</small>
+  </a>
+</div>
+
 
 
       <div id="box" class="itembox">
