commented out the pop up form, and added name attribute to form on jobpost.html, so that the server knows what the information is

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     text-align: center;
   }
   .list-group-item:hover {
-    
+
   }
 
   </style>
@@ -64,7 +64,7 @@
       <h2 class="dashboardh2">Find jobs to help you start your career in blockchain technology</h2>
 <div class="text-center py-4 mt-3">
       <!--<a id="postlink" href="jobpost.html"><button class="btn">Post a Job<i class="fa fa-pencil ml-2"></i></button></a> -->
-      <button class="btn" id="bt-popup">Post a Job<i class = "fa fa-pencil ml-2"></i></button>
+    <a href="jobpost.html">  <button class="btn">Post a Job<i class = "fa fa-pencil ml-2"></i></button></a>
 </div>
 
 
@@ -233,7 +233,7 @@
    </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js" type="text/javascript"> </script>
 
-
+<!--
   <script src="https://embed.typeform.com/embed.js" type="text/javascript"></script>
 <script type="text/javascript">
   let popup2;
@@ -261,7 +261,7 @@
 
 
 </script>
-
+-->
 
 </body>
 
