--- a/jobpost.html
+++ b/jobpost.html
@@ -53,6 +53,9 @@
     .btn {
       background-color: #00e676;
     }
+    #customButton {
+      text-align: center;
+    }
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
@@ -110,12 +113,40 @@
 
 
 
-
-
-            <div class="text-center py-4 mt-3">
-                <button class="btn" type="submit">Send<i class="fa fa-paper-plane-o ml-2"></i></button>
-            </div>
         </form>
+
+  <form action="your-server-side-code" method="POST">
+    <script src="https://checkout.stripe.com/checkout.js"></script>
+<div class="text-center py-4 mt-3">
+    <button class="btn" id=customButton>Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
+  </div>
+    <script>
+    var handler = StripeCheckout.configure({
+      key: 'pk_test_GKVg1Dv1jAOERaQmpWlXPycu',
+      image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
+      locale: 'auto',
+      token: function(token) {
+        // You can access the token ID with `token.id`.
+        // Get the token ID to your server-side code for use.
+      }
+    });
+
+    document.getElementById('customButton').addEventListener('click', function(e) {
+      // Open Checkout with further options:
+      handler.open({
+        name: 'Blockgigz',
+        description: 'Job Posting',
+        amount: 19900
+      });
+      e.preventDefault();
+    });
+
+    // Close Checkout on page navigation:
+    window.addEventListener('popstate', function() {
+      handler.close();
+    });
+    </script>
+</form>
         <!-- Default form subscription -->
 
     </div>
