edited the job listings

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     text-align: center;
   }
   .list-group-item:hover {
-
+    background-color: #00e676;
+    color: white;
   }
 
   </style>
@@ -94,26 +95,33 @@
     <small>New York, NY</small>
   </div>
   </a>
+  <br>
   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small class="text-muted">3 days ago</small>
+      <h5 class="mb-1">Blockstack Engineer</h5>
+      <small>3 days ago</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small class="text-muted">Donec id elit non mi porta.</small>
+    <div class="d-flex w-100 justify-content-between">
+    <small>Blockstack</small>
+    <small>New York, NY</small>
+  </div>
   </a>
+  <br>
   <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">List group item heading</h5>
-      <small class="text-muted">3 days ago</small>
+      <h5 class="mb-1">Blockstack Engineer</h5>
+      <small>3 days ago</small>
     </div>
-    <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-    <small class="text-muted">Donec id elit non mi porta.</small>
+    <div class="d-flex w-100 justify-content-between">
+    <small>Blockstack</small>
+    <small>New York, NY</small>
+  </div>
   </a>
+  <br>
 </div>
 
 
-
+  <!--
       <div id="box" class="itembox">
         <div class="item currency">
           <div class="w-row">
@@ -190,7 +198,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
 
 
   <div class="background-section">
@@ -206,7 +214,7 @@
         </div>
 
         <div class="footer-bottom-v1 fb1b">
-          <p class="footerlegal"> copy 2018 Blockgigz</p>
+          <p class="footerlegal"> &copy 2018 Blockgigz</p>
         </div>
       </div>
     </div>
