--- a/public/jobpost.html
+++ b/public/jobpost.html
@@ -88,65 +88,42 @@
     <div class="card-body">
 
         <!-- Default form subscription -->
-        <form action="index.html" method = "POST">
+
             <p class="h4 text-center py-4">Post Job</p>
 
             <!-- Default input name -->
+            <label for="username" class="grey-text font-weight-light">Your Name</label>
+            <input type="text" id="username" class="form-control" name="username">
+
+            <br>
+
             <label for="companyName" class="grey-text font-weight-light">Company Name</label>
-            <input type="text" id="defaultFormCardNameEx" class="form-control" name="companyName">
+            <input type="text" id="companyName" class="form-control" name="companyName">
 
             <br>
 
             <!-- Default input email -->
             <label for="email" class="grey-text font-weight-light">Your email</label>
-            <input type="email" id="defaultFormCardEmailEx" class="form-control" name="email">
+            <input type="email" id="email" class="form-control" name="email">
 
             <br>
 
             <label for = "jobPosition" class="grey-text font-weight-light">Job Position</label>
-            <input type="text" id="defaultFormCardNameEx" class="form-control" name="jobPosition">
+            <input type="text" id="jobPosition" class="form-control" name="jobPosition">
 
             <br>
 
             <label for="jobDescription" class="grey-text font-weight-light">Job Description</label>
-   <textarea type="text" id="defaultFormContactMessageEx" class="form-control" rows="5" name="jobDescription"></textarea>
+   <textarea type="text" id="jobDescription" class="form-control" rows="5" name="jobDescription"></textarea>
 
 
 
-        </form>
 
-  <form action="your-server-side-code" method="POST">
-    <script src="https://checkout.stripe.com/checkout.js"></script>
+
+
 <div class="text-center py-4 mt-3">
-    <button class="btn" id=customButton>Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
+    <button class="btn" onclick="writeUserData()">Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
   </div>
-    <script>
-    var handler = StripeCheckout.configure({
-      key: 'pk_test_GKVg1Dv1jAOERaQmpWlXPycu',
-      image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
-      locale: 'auto',
-      token: function(token) {
-        // You can access the token ID with `token.id`.
-        // Get the token ID to your server-side code for use.
-      }
-    });
-
-    document.getElementById('customButton').addEventListener('click', function(e) {
-      // Open Checkout with further options:
-      handler.open({
-        name: 'Blockgigz',
-        description: 'Job Posting',
-        amount: 19900
-      });
-      e.preventDefault();
-    });
-
-    // Close Checkout on page navigation:
-    window.addEventListener('popstate', function() {
-      handler.close();
-    });
-    </script>
-</form>
         <!-- Default form subscription -->
 
     </div>
@@ -175,11 +152,24 @@
         </div>
 
         <div class="footer-bottom-v1 fb1b">
-          <p class="footerlegal">&copy 2018 Blockgigz</p>
+          <p class="footerlegal">& copy 2018 Blockgigz</p>
         </div>
       </div>
     </div>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCEIZOqrwH_gyvdWGxKorj4Utstca3li0A",
+      authDomain: "blockgigz.firebaseapp.com",
+      databaseURL: "https://blockgigz.firebaseio.com",
+      projectId: "blockgigz",
+      storageBucket: "blockgigz.appspot.com",
+      messagingSenderId: "340116286999"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript">*/ </script>
 
   <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js">*/ </script> <![endif]-->
@@ -201,6 +191,7 @@
     });
    </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js" type="text/javascript"> </script>
+  <script src="index.js"></script>
 
 
 </body>
