added url input on form

--- a/public/jobpost.html
+++ b/public/jobpost.html
@@ -116,7 +116,10 @@
             <label for="jobDescription" class="grey-text font-weight-light">Job Description</label>
    <textarea type="text" id="jobDescription" class="form-control" rows="5" name="jobDescription"></textarea>
 
+   <br>
 
+   <label for = "jobUrl" class="grey-text font-weight-light">Application URL (Where to apply)</label>
+   <input type="text" id="jobUrl" class="form-control" name="jobUrl">
 
 
 
