--- a/public/jobpost.html
+++ b/public/jobpost.html
@@ -56,6 +56,29 @@
     #customButton {
       text-align: center;
     }
+    .StripeElement {
+  background-color: white;
+  height: 40px;
+  padding: 10px 12px;
+  border-radius: 4px;
+  border: 1px solid #d3d5da;
+
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+#card-errors {
+  color: #fa755a;
+}
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
@@ -64,7 +87,7 @@
 
   </style>
 
-
+<script src="https://js.stripe.com/v3/"></script>
 
 </head>
 
@@ -91,6 +114,8 @@
 
             <p class="h4 text-center py-4">Post Job</p>
 
+
+            <form action="/charge" method="post" id="payment-form">
             <!-- Default input name -->
             <label for="username" class="grey-text font-weight-light">Your Name</label>
             <input type="text" id="username" class="form-control" name="username">
@@ -121,11 +146,101 @@
    <label for = "jobUrl" class="grey-text font-weight-light">Application URL (Where to apply)</label>
    <input type="text" id="jobUrl" class="form-control" name="jobUrl">
 
+   <br>
+
+       <label for="card-element" class="grey-text font-weight-light">
+         Credit or debit card
+       </label>
+       <div id="card-element">
+         <!-- A Stripe Element will be inserted here. -->
+       </div>
+
+       <!-- Used to display form errors. -->
+       <div id="card-errors" role="alert"></div>
+
+
+
+     <script>
+(function(){
+     // Create a Stripe client.
+var stripe = Stripe('pk_test_HG5zLjoSzvucYBybwq3Ec36M');
+
+// Create an instance of Elements.
+var elements = stripe.elements();
+
+// Custom styling can be passed to options when creating an Element.
+// (Note that this demo uses a wider set of styles than the guide below.)
+var style = {
+  base: {
+    color: '#32325d',
+    lineHeight: '18px',
+    fontFamily: '"Sans serif", Helvetica, sans-serif',
+    fontSmoothing: 'antialiased',
+    fontSize: '16px',
+    '::placeholder': {
+      color: '#aab7c4'
+    }
+  },
+  invalid: {
+    color: '#fa755a',
+    iconColor: '#fa755a'
+  }
+};
+
+// Create an instance of the card Element.
+var card = elements.create('card', {style: style});
+
+// Add an instance of the card Element into the `card-element` <div>.
+card.mount('#card-element');
+
+// Handle real-time validation errors from the card Element.
+card.addEventListener('change', function(event) {
+  var displayError = document.getElementById('card-errors');
+  if (event.error) {
+    displayError.textContent = event.error.message;
+  } else {
+    displayError.textContent = '';
+  }
+});
+
+// Handle form submission.
+var form = document.getElementById('payment-form');
+form.addEventListener('submit', function(event) {
+  event.preventDefault();
+
+  stripe.createToken(card).then(function(result) {
+    if (result.error) {
+      // Inform the user if there was an error.
+      var errorElement = document.getElementById('card-errors');
+      errorElement.textContent = result.error.message;
+    } else {
+      // Send the token to your server.
+      stripeTokenHandler(result.token);
+    }
+  });
+});
+
+function stripeTokenHandler(token) {
+  // Insert the token ID into the form so it gets submitted to the server
+  var form = document.getElementById('payment-form');
+  var hiddenInput = document.createElement('input');
+  hiddenInput.setAttribute('type', 'hidden');
+  hiddenInput.setAttribute('name', 'stripeToken');
+  hiddenInput.setAttribute('value', token.id);
+  form.appendChild(hiddenInput);
+
+  alert(token.id);
+  // Submit the form form.submit();
+}
+})();
+
+     </script>
+
 
 
 
 <div class="text-center py-4 mt-3">
-    <button class="btn" onclick="writeUserData()">Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
+    <button class="btn" onclick="writeUserData()" type="submit">Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
   </div>
         <!-- Default form subscription -->
 
