--- a/public/jobpost.html
+++ b/public/jobpost.html
@@ -5,41 +5,45 @@
 <head>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet"
-          href="node_modules/material-components-web/dist/material-components-web.css">
+  <link rel="stylesheet" href="node_modules/material-components-web/dist/material-components-web.css">
   <link href="test.css" rel="stylesheet" type="text/css" />
 
-<!-- Font Awesome -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Bootstrap core CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-<!-- Material Design Bootstrap -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
 
 
-<script src="https://embed.typeform.com/embed.js"></script>
+  <script src="https://embed.typeform.com/embed.js"></script>
 
-<!-- JQuery -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!-- Bootstrap tooltips -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
-<!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript">*/ </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js" type="text/javascript">
+    */
+  </script>
   <script type="text/javascript">
     WebFont.load({
       google: {
-        families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic"]
+        families: [
+          "Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic",
+          "Merriweather:300,300italic,400,400italic,700,700italic,900,900italic"
+        ]
       }
     });
-   </script>
+  </script>
   <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript">*/ </script> <![endif]-->
 
-    <style>
+  <style>
     ::-moz-selection {
       /* Firefox */
       color: #FFFFFF;
@@ -50,44 +54,48 @@
       color: #FFFFFF;
       background: #00e676;
     }
+
     .btn {
       background-color: #00e676;
     }
+
     #customButton {
       text-align: center;
     }
+
     .StripeElement {
-  background-color: white;
-  height: 40px;
-  padding: 10px 12px;
-  border-radius: 4px;
-  border: 1px solid #d3d5da;
+      background-color: white;
+      height: 40px;
+      padding: 10px 12px;
+      border-radius: 4px;
+      border: 1px solid #d3d5da;
 
-}
+    }
 
-.StripeElement--focus {
-  box-shadow: 0 1px 3px 0 #cfd7df;
-}
+    .StripeElement--focus {
+      box-shadow: 0 1px 3px 0 #cfd7df;
+    }
 
-.StripeElement--invalid {
-  border-color: #fa755a;
-}
+    .StripeElement--invalid {
+      border-color: #fa755a;
+    }
 
-.StripeElement--webkit-autofill {
-  background-color: #fefde5 !important;
-}
-#card-errors {
-  color: #fa755a;
-}
+    .StripeElement--webkit-autofill {
+      background-color: #fefde5 !important;
+    }
+
+    #card-errors {
+      color: #fa755a;
+    }
   </style>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
 
   <style>
-
   </style>
 
-<script src="https://js.stripe.com/v3/"></script>
+  <script src="https://js.stripe.com/v3/"></script>
 
 </head>
 
@@ -104,77 +112,79 @@
   </div>
 
 
-<!-- Card -->
-<div class="container">
+  <!-- Card -->
+  <div class="container">
 
     <!-- Card body -->
     <div class="card-body">
 
+      <!-- Default form subscription -->
+
+      <p class="h4 text-center py-4">Post Job</p>
+
+
+      <form action="/charge" method="post" id="payment-form">
+        <!-- Default input name -->
+        <label for="username" class="grey-text font-weight-light">Your Name</label>
+        <input type="text" id="username" class="form-control" name="username">
+
+        <br>
+
+        <label for="companyName" class="grey-text font-weight-light">Company Name</label>
+        <input type="text" id="companyName" class="form-control" name="companyName">
+
+        <br>
+
+        <!-- Default input email -->
+        <label for="email" class="grey-text font-weight-light">Your email</label>
+        <input type="email" id="email" class="form-control" name="email">
+
+        <br>
+
+        <label for="jobPosition" class="grey-text font-weight-light">Job Position</label>
+        <input type="text" id="jobPosition" class="form-control" name="jobPosition">
+
+        <br>
+
+        <label for="jobDescription" class="grey-text font-weight-light">Job Description</label>
+        <textarea type="text" id="jobDescription" class="form-control" rows="5" name="jobDescription"></textarea>
+
+        <br>
+
+        <label for="jobUrl" class="grey-text font-weight-light">Application URL (Where to apply)</label>
+        <input type="text" id="jobUrl" class="form-control" name="jobUrl">
+
+        <br>
+
+        <label for="card-element" class="grey-text font-weight-light">
+          Credit or debit card
+        </label>
+        <div id="card-element">
+          <!-- A Stripe Element will be inserted here. -->
+        </div>
+
+        <!-- Used to display form errors. -->
+        <div id="card-errors" role="alert"></div>
+
+
+
+
+
+
+
+
+        <div class="text-center py-4 mt-3">
+          <button class="btn" onclick="writeUserData()" type="submit">Submit
+            <i class="fa fa-paper-plane-o ml-2"></i>
+          </button>
+        </div>
         <!-- Default form subscription -->
-
-            <p class="h4 text-center py-4">Post Job</p>
-
-
-            <form action="/charge" method="post" id="payment-form">
-            <!-- Default input name -->
-            <label for="username" class="grey-text font-weight-light">Your Name</label>
-            <input type="text" id="username" class="form-control" name="username">
-
-            <br>
-
-            <label for="companyName" class="grey-text font-weight-light">Company Name</label>
-            <input type="text" id="companyName" class="form-control" name="companyName">
-
-            <br>
-
-            <!-- Default input email -->
-            <label for="email" class="grey-text font-weight-light">Your email</label>
-            <input type="email" id="email" class="form-control" name="email">
-
-            <br>
-
-            <label for = "jobPosition" class="grey-text font-weight-light">Job Position</label>
-            <input type="text" id="jobPosition" class="form-control" name="jobPosition">
-
-            <br>
-
-            <label for="jobDescription" class="grey-text font-weight-light">Job Description</label>
-   <textarea type="text" id="jobDescription" class="form-control" rows="5" name="jobDescription"></textarea>
-
-   <br>
-
-   <label for = "jobUrl" class="grey-text font-weight-light">Application URL (Where to apply)</label>
-   <input type="text" id="jobUrl" class="form-control" name="jobUrl">
-
-   <br>
-
-       <label for="card-element" class="grey-text font-weight-light">
-         Credit or debit card
-       </label>
-       <div id="card-element">
-         <!-- A Stripe Element will be inserted here. -->
-       </div>
-
-       <!-- Used to display form errors. -->
-       <div id="card-errors" role="alert"></div>
-
-
-
-     
-
-
-
-
-<div class="text-center py-4 mt-3">
-    <button class="btn" onclick="writeUserData()" type="submit">Submit<i class="fa fa-paper-plane-o ml-2"></i></button>
-  </div>
-        <!-- Default form subscription -->
-
+      </form>
     </div>
     <!-- Card body -->
 
-</div>
-<!-- Card -->
+  </div>
+  <!-- Card -->
 
 
 
@@ -187,11 +197,15 @@
 
 
         <div class="footer-v5-nav-list">
-          <a href="index.html"><h6 class="footer-v5-header">Home</h6></a>
+          <a href="index.html">
+            <h6 class="footer-v5-header">Home</h6>
+          </a>
         </div>
 
         <div class="footer-v5-nav-list">
-          <a href="jobpost.html"><h6 class="footer-v5-header">Post a Job</h6></a>
+          <a href="jobpost.html">
+            <h6 class="footer-v5-header">Post a Job</h6>
+          </a>
 
         </div>
 
@@ -214,11 +228,13 @@
     };
     firebase.initializeApp(config);
   </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript">*/ </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js" type="text/javascript">
+    */
+  </script>
 
   <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js">*/ </script> <![endif]-->
   <script>
-    $(document).on('ready', function() {
+    $(document).on('ready', function () {
       var winHeight = $(window).height(),
         docHeight = $(document).height(),
         progressBar = $('progress'),
@@ -228,13 +244,14 @@
       max = docHeight - winHeight;
       progressBar.attr('max', max);
 
-      $(document).on('scroll', function() {
+      $(document).on('scroll', function () {
         value = $(window).scrollTop();
         progressBar.attr('value', value);
       });
     });
-   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js" type="text/javascript"> </script>
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/2.2.2/isotope.pkgd.js" type="text/javascript">
+  </script>
   <script src="index.js"></script>
 
 
